PHP: Added the vender name segment to each path of the packages (on the code of PSR-4) / Added README.ja.md

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,12 @@
 	"require": {
 		"php": ">=5.4.0"
 	},
+	"require-dev": {
+		"phpunit/phpunit": "4.1.*"
+	},
 	"autoload": {
 		"psr-4": {
-			"Saclient\\": "Saclient/"
+			"SakuraInternet\\": "lib/SakuraInternet/"
 		}
 	}
 }
