--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"name": "sakura-internet/saklient",
+	"version": "0.0.1",
 	"keywords": ["sakura", "api", "client", "cloud"],
 	"type": "library",
 	"license": "MIT",
