--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "sakura-internet/saklient",
-	"version": "0.0.2.6",
+	"version": "0.0.",
 	"keywords": ["sakura", "api", "client", "cloud"],
 	"type": "library",
 	"license": "MIT",
